<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_weight="5"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:typeface="monospace"
                android:text="TextView" />

            <EditText
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:paddingTop="2dp"
                android:typeface="serif"
                android:textSize="15dp"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:typeface="serif"
                android:textSize="10dp"
                android:inputType="phone" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="150dp"
        android:orientation="vertical">


        <Button
            android:id="@+id/buttonCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_reg_Call" />

        <Button
            android:id="@+id/buttonQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_reg_kuis" />
        <Button
            android:id="@+id/buttonLang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_reg_lang" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>